--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.5",
     "typewriter-effect": "^2.21.0"
   },
