--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mux/mux-player": "^3.3.0",
     "@mux/mux-player-react": "^3.3.0",
     "framer-motion": "^12.6.5",
+    "gsap": "^3.12.7",
     "motion": "^12.4.10",
     "next": "15.1.0",
     "react": "^19.0.0",
