--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
